--- a/product.html
+++ b/product.html
@@ -4,27 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SuperStore</title>
+    <title>Product - SuperStore</title>
     <link rel="icon" href="img/revou.png" type="image/png">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/logo.css">
+    <link rel="stylesheet" href="css/modalproduct.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <style>
-        #footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: #edecea;
-            text-align: center;
-            padding: 10px 0;
-            z-index: 1000; 
-        }
-    </style>
 </head>
 <body>
     <header>
         <div class="header-content">
-            <a href="#" class="logo">Super<span>Store</span></a>
+            <img src="img/revou.png" alt="RevoU Logo" class="logo-image">
+            <a href="index.html" class="logo">Super<span>Store</span></a>
             <div class="menu-icon" id="menu-icon"><i class="bx bx-menu"></i></div>
         </div>
         <nav>
@@ -37,58 +30,69 @@
             </ul>
         </nav>
     </header>
-
-    <section class="product">
-        <div class="team-header">
-            <h1>List Products</h1>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="text-end">
-                    <label for="filter" class="filter-label">Urutkan:</label>
-                     <select name="filter" id="filter">
-                        <option value="2">Harga Terendah</option>
-                        <option value="3">Harga Tertinggi</option>
-                        <option value="4">Terbaru</option>
-                        <option value="5">Terpopuler</option>
-                        </select>
-                    </div>
-                
+    <main>
+        <section class="mt-2">
+            <div class="container">
+                <h1>Categories</h1>
+                <div class="product-list" id="product-categories"></div>
+                <h2 class="mt-3">Sub Categories</h2>
+                <div class="sub-categories" style="display: flex; gap: 10px; flex-wrap: wrap;" id="sub-categories-choiced"></div>
             </div>
-            <div class="product-list">
-                <div class="filter-product">
-                    <div class="dropdown">
-                       bingung mau diisi apa wkwk
-                    </div>
-                </div>
-                <div class="product-item">
-                    <img src="https://images.tokopedia.net/img/cache/200-square/VqbcmM/2022/8/19/5a269339-d626-40d1-8214-75dbfb9b606c.jpg" alt="product1">
-                    <div class="item-desc">
-                        <a href="#">Laptop Advan AI GEN Ryzen 7 8845HS 16 GB</a>
-                        <h4>Rp 10.000.000</h4>
-                        <span>Jakarta Pusat</span>
-                    </div>
-                </div>
-                <div class="product-item">
-                    <img src="https://images.tokopedia.net/img/cache/200-square/VqbcmM/2024/1/20/f3da91bc-6094-44c0-a4f1-73c87f4fe41e.png" alt="product1">
-                    <div class="item-desc">
-                        <a href="#">Laptop Advan AI GEN Ryzen 7 8845HS 16 GB</a>
-                        <h4>Rp 10.000.000</h4>
-                        <span>Jakarta Pusat</span>
-                    </div>
-                </div>
-                <div class="product-item">
-                    <img src="https://images.tokopedia.net/img/cache/200-square/VqbcmM/2024/5/18/78547d3b-27b6-4035-8e16-21ed53a61a8b.jpg" alt="product1">
-                    <div class="item-desc">
-                        <a href="#">Laptop Advan AI GEN Ryzen 7 8845HS 16 GB</a>
-                        <h4>Rp 10.000.000</h4>
-                        <span>Jakarta Pusat</span>
-                    </div>
-                </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="card-product-list" id="products-show"></div>
+            </div>
+        </section>
+    </main>
+    <section id="productModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div style="display: flex; flex-direction: column;">
+                <img id="modalImage" src="" alt="Product Image" class="modal-img">
+                <h2 id="modalProductName"></h2>
+                <p id="modalSubCategory"></p>
+                <p id="modalProductPrice"></p>
+                <p id="modalDescription"></p>
             </div>
         </div>
     </section>
-    
-    <script src="index.js"></script>
+    <footer id="footer">
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="img/revou.png" alt="Logo">
+            </div>
+            <div class="footer-column">
+                <h3>PT Revolusi Cita Edukasi</h3>
+                <p>Go Work Menara Rajawali, Ground Floor, Jl. DR. Ide Anak Agung Gde Agung, RT.5/RW.2, Kuningan, Jakarta, South Jakarta City, Special Capital Region of Jakarta 12950</p>
+            </div>
+            <div id="footer-nav" class="footer-column">
+                <h3>Navigation</h3>
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="product.html">Product</a></li>
+                    <li><a href="dashboard.html">Dashboard</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+            <div id="footer-links" class="footer-column">
+                <h4>External Links</h4>
+                <ul>
+                    <li><a href="https://revou.co/">RevoU</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="social-icons">
+            <a href="https://x.com/revoudotco"><i class="bx bxl-twitter"></i></a>
+            <a href="instagram.com/revou_id"><i class="bx bxl-instagram"></i></a>
+            <a href="www.youtube.com/@revoudotco"><i class="bx bxl-youtube"></i></a>
+            <a href="https://www.facebook.com/revoU.co/"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.linkedin.com/school/revou/mycompany/"><i class="bx bxl-linkedin"></i></a>
+        </div>
+        <p class="footer-bottom">&copy; 2024 SuperStore. All rights reserved</p>
+    </footer>
+    <script src="/js/product.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
